fixed alignment switch labels scalar fiel wind and pressure #778

--- a/projects/mistral/frontend/app/components/maps/meteo-tiles/side-nav/side-nav.component.scss
+++ b/projects/mistral/frontend/app/components/maps/meteo-tiles/side-nav/side-nav.component.scss
@@ -731,6 +731,12 @@ $dark-blue: #004080;
    }
 }
 
+.wind-switch p{
+  left: 4px;
+}
+.prs-switch p{
+  left: 6px;
+}
 /*multimodel switch*/
 .collapsed .multi-model .form-switch {
   padding-left: 35px;
